--- a/angular-building-blocks/angular.json
+++ b/angular-building-blocks/angular.json
@@ -10,7 +10,7 @@
           "strict": true
         }
       },
-      "root": "",
+      "root": "root",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
